add images to timeline

--- a/views/pickleball.hbs
+++ b/views/pickleball.hbs
@@ -63,10 +63,13 @@
                 <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#">Book Lessons</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
             </li>
           </ul>
           <form class="form-inline mt-2 mt-md-0">
@@ -87,221 +90,234 @@
     <main role="main">
       </main>
       </br>
-      <div id='map' class="container-fluid py-5">
-          <div class="row">
-    <div class="col-lg-12">
-
-      <div class="horizontal-timeline">
-
-        <ul class="list-inline items">
-          <li class="list-inline-item items-list">
-            <div class="px-7">
-              <div class="event-date badge bg-warning">Jan 12</div>
-              <h5 class="pt-2"><img
-          id="ppa"
-            class=""
-            style="height: 60px; width: 60px;"
-            
-          /> Masters</h5>
-              {{!-- <p style='height: 70px' class="text-muted">Jan 12th-15th</p> --}}
-              <div>
-                <a href="#" class="btn btn-primary btn-sm">Read more</a>
-              </div>
-            </div>
-          </li>
-          <li class="list-inline-item items-list">
-            <div class="px-7">
-              <div class="event-date badge bg-secondary">Jan 26</div>
-              <h5 class="pt-2"><img
-          id="mlp"
-            class=""
-            style="height: 60px; width: 60px;"
-            
-          />  Palm Springs</h5>
-              {{!-- <p style='height: 70px' class="text-muted">Team CLEAN (Yana) | Team ATL Bouncers (Ben). --}}
-              {{!-- </p> --}}
-              <div>
-                <a href="#" class="btn btn-primary btn-sm">Read more</a>
-              </div>
-            </div>
-          </li>
-          <li class="list-inline-item items-list">
-            <div class="px-7">
-              <div class="event-date badge bg-secondary">Feb 1</div>
-              <h5 class="pt-2"><img
-          id="ppa"
-            class=""
-            style="height: 60px; width: 60px;"
-            
-          />  Desert Ridge</h5>
-              {{!-- <p style='height: 70px' class="text-muted">If several languages coalesce the grammar of the resulting simple and --}}
-                {{!-- regular</p> --}}
-              <div>
-                <a href="#" class="btn btn-primary btn-sm">Read more</a>
-              </div>
-            </div>
-          </li>
-          <li class="list-inline-item items-list">
-            <div class="px-7">
-              <div class="event-date badge bg-secondary">Feb 15</div>
-              <h5 class="pt-2"><img
-          id="ppa"
-            class=""
-            style="height: 60px; width: 60px;"
-            
-          />  Carvana</h5>
-              {{!-- <p style='height: 70px' class="text-muted">Languages only differ in their pronunciation and their most common words. --}}
-              {{!-- </p> --}}
-              <div>
-                <a href="#" class="btn btn-primary btn-sm">Read more</a>
-              </div>
-            </div>
-          </li>
+      <div id="timeline" class="row">
+				<div class="col-md-12">
+        <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4">2023 Season</h1>
+        <p class="lead"><strong>"PPA Gold Card"</strong> holders and <strong>"MLP Draft" </strong>picks!</p>
         
-        </ul>
-
-      </div>
-
-    </div>
-          </div>
-      </div>
+        </div>
+        <hr/>
+					<div style="display:inline-block;width:100%;overflow-y:auto;">
+					<ul class="timeline timeline-horizontal">
+						<li class="timeline-item">
+							<div class="timeline-badge" style="background-color:white; border-style: solid;
+  border-width: 5px; border-color: rgb(187, 187, 186)"><img
+            id="ppa"
+              class="rounded-circle"
+              style="height: 45px; width: 45px; display: block;"
+              
+            /></div>
+							<div class="timeline-panel " style="background-color:
+#1e70a6; border-style: solid;
+  border-width: 5px; border-color: rgb(202, 204, 56)" >
+								<div class="timeline-heading">
+									<h4 style="color: white" class="timeline-title">Masters</h4>
+									<p style="color: white"><small>Palm Springs, CA | Jan 12-15</small></p>
+								</div>
+								{{!-- <div class="timeline-body">
+									<p>Mussum ipsum cacilds, vidis litro abertis. Consetis faiz elementum girarzis, nisi eros gostis.</p>
+								</div> --}}
+							</div>
+						</li>
+            <li class="timeline-item">
+							<div class="timeline-badge" style="background-color:white; border-style: solid;
+  border-width: 5px; border-color: rgb(187, 186, 186)"><img
+            id="mlp"
+              class="rounded-circle"
+              style="height: 45px; width: 45px; display: block;"
+              
+            /></div>
+							<div class="timeline-panel " style="background-color: #f0612e" >
+								<div class="timeline-heading">
+									<h4  style="color: white" class="timeline-title">MLP: Round 1</h4>
+									<p style="color: white"><small>Palm Springs, CA | Jan 12-15</small></p>
+								</div>
+								{{!-- <div class="timeline-body">
+									<p>Mussum ipsum cacilds, vidis litro abertis. Consetis faiz elementum girarzis, nisi eros gostis.</p>
+								</div> --}}
+							</div>
+						</li>
+						<li class="timeline-item">
+							<div class="timeline-badge" style="background-color:white; border-style: solid;
+  border-width: 5px; border-color: rgb(187, 187, 186)"><img
+            id="ppa"
+              class="rounded-circle"
+              style="height: 45px; width: 45px; display: block;"
+              
+            /></div>
+							<div class="timeline-panel " style="background-color:
+#1e70a6; " >
+								<div class="timeline-heading">
+									<h4 style="color: white" class="timeline-title">Desert Ridge</h4>
+									<p style="color: white"><small>Pheoniz, AZ | Feb 12-15</small></p>
+								</div>
+								{{!-- <div class="timeline-body">
+									<p>Mussum ipsum cacilds, vidis litro abertis. Consetis faiz elementum girarzis, nisi eros gostis.</p>
+								</div> --}}
+							</div>
+						</li>
+            						<li class="timeline-item">
+							<div class="timeline-badge" style="background-color:white; border-style: solid;
+  border-width: 5px; border-color: rgb(187, 187, 186)"><img
+            id="ppa"
+              class="rounded-circle"
+              style="height: 45px; width: 45px; display: block;"
+              
+            /></div>
+							<div class="timeline-panel " style="background-color:
+#1e70a6;)" >
+								<div class="timeline-heading">
+									<h4 style="color: white" class="timeline-title">PPA: Masters</h4>
+									<p style="color: white"><small>Palm Springs, CA | Jan 12-15</small></p>
+								</div>
+								{{!-- <div class="timeline-body">
+									<p>Mussum ipsum cacilds, vidis litro abertis. Consetis faiz elementum girarzis, nisi eros gostis.</p>
+								</div> --}}
+							</div>
+						</li>
+					</ul>
+				</div>
+				</div>
+			</div>
+      <hr/>
       <div class="row">
+        <div class="col-md-3"></div>
+        <div id='yanasection'  class="col-md-3">
+          <div class="card mb-4 box-shadow rounded">
+            <img
+            id="yana"
+              class="card-img-top rounded"
+              style="height: 30vh; width: 100%; display: block;"
+              
+            />
+            <div class="card-body">
+              <h1 class="jumbotron-heading">Yana Grechkina</h1>
+              <p class="card-text">PPA Touring Pro</p>
+              <div class="d-flex justify-content-between align-items-center">
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-primary"
+                  >Lessons</button>
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-success"
+                  >Sponsors</button>
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-secondary"
+                  >About</button>
+              </div>
+              </br>
+              <ul class="list-group mb-3">
+              <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                  <h6 class="my-0">Highest PPA </br> Doubles</h6>
+                  {{!-- <small class="text-muted">Brief description</small> --}}
+                </div>
+                <span class="font-weight-bold">9th</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                  <h6 class="my-0">Highest PPA </br>Singles</h6>
+                  {{!-- <small class="text-muted">Brief description</small> --}}
+                </div>
+                <span class="font-weight-bold">10th</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                  <h6 class="my-0">Highest PPA </br>Mixed</h6>
+                  {{!-- <small class="text-muted">Brief description</small> --}}
+                </div>
+                <span class="font-weight-bold">16th</span>
+              </li>
+                          <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                  <h6 class="my-0">DUPR </br>Doubles</h6>
+                  {{!-- <small class="text-muted">Brief description</small> --}}
+                </div>
+                <span class="font-weight-bold">8.24</span>
+              </li>
+                          <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                  <h6 class="my-0">DUPR </br>Singles</h6>
+                  {{!-- <small class="text-muted">Brief description</small> --}}
+                </div>
+                <span class="font-weight-bold">6.66</span>
+              </li>
+            </ul>
+            </div>
+          </div>
+        </div>
+        <div id='bensection' class="col-md-3">
+          <div class="card mb-4 box-shadow rounded">
+            <img
+            id="ben"
+              class="card-img-top rounded"
+              style="height: 30vh; width: 100%; display: block;"
+              
+            />
+            <div class="card-body">
+              <h1 class="jumbotron-heading">Ben Newell</h1>
+              <p class="card-text">PPA Touring Pro</p>
+              <div class="d-flex justify-content-between align-items-center">
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-primary"
+                  >Lessons</button>
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-success"
+                  >Sponsors</button>
+                  <button
+                    type="button"
+                    class="btn btn-sm btn-secondary"
+                  >About</button>
+              </div>
+              </br>
+              <ul class="list-group mb-3">
+              <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                  <h6 class="my-0">Highest PPA </br> Doubles</h6>
+                  {{!-- <small class="text-muted">Brief description</small> --}}
+                </div>
+                <span class="font-weight-bold">17th</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                  <h6 class="my-0">Highest PPA </br>Singles</h6>
+                  {{!-- <small class="text-muted">Brief description</small> --}}
+                </div>
+                <span class="font-weight-bold">27th</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                  <h6 class="my-0">Highest PPA </br>Mixed</h6>
+                  {{!-- <small class="text-muted">Brief description</small> --}}
+                </div>
+                <span class="font-weight-bold">51st</span>
+              </li>
+                          <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                  <h6 class="my-0">DUPR </br>Doubles</h6>
+                  {{!-- <small class="text-muted">Brief description</small> --}}
+                </div>
+                <span class="font-weight-bold">6.24</span>
+              </li>
+                          <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                  <h6 class="my-0">DUPR </br>Singles</h6>
+                  {{!-- <small class="text-muted">Brief description</small> --}}
+                </div>
+                <span class="font-weight-bold">6.66</span>
+              </li>
+            </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3"></div>
+      </div>
       
-      <div class="col-md-3"></div>
-      <div id='yanasection'  class="col-md-3">
-        <div class="card mb-4 box-shadow rounded">
-          <img
-          id="yana"
-            class="card-img-top rounded"
-            style="height: 30vh; width: 100%; display: block;"
-            
-          />
-          <div class="card-body">
-            <h1 class="jumbotron-heading">Yana Grechkina</h1>
-            <p class="card-text">PPA Touring Pro</p>
-            <div class="d-flex justify-content-between align-items-center">
-                <button
-                  type="button"
-                  class="btn btn-sm btn-primary"
-                >Lessons</button>
-                <button
-                  type="button"
-                  class="btn btn-sm btn-success"
-                >Sponsors</button>
-                <button
-                  type="button"
-                  class="btn btn-sm btn-secondary"
-                >About</button>
-            </div>
-            </br>
-            <ul class="list-group mb-3">
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Highest PPA </br> Doubles</h6>
-                {{!-- <small class="text-muted">Brief description</small> --}}
-              </div>
-              <span class="font-weight-bold">9th</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Highest PPA </br>Singles</h6>
-                {{!-- <small class="text-muted">Brief description</small> --}}
-              </div>
-              <span class="font-weight-bold">10th</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Highest PPA </br>Mixed</h6>
-                {{!-- <small class="text-muted">Brief description</small> --}}
-              </div>
-              <span class="font-weight-bold">16th</span>
-            </li>
-                        <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">DUPR </br>Doubles</h6>
-                {{!-- <small class="text-muted">Brief description</small> --}}
-              </div>
-              <span class="font-weight-bold">8.24</span>
-            </li>
-                        <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">DUPR </br>Singles</h6>
-                {{!-- <small class="text-muted">Brief description</small> --}}
-              </div>
-              <span class="font-weight-bold">6.66</span>
-            </li>
-          </ul>
-          </div>
-        </div>
-      </div>
-      <div id='bensection' class="col-md-3">
-        <div class="card mb-4 box-shadow rounded">
-          <img
-          id="ben"
-            class="card-img-top rounded"
-            style="height: 30vh; width: 100%; display: block;"
-            
-          />
-          <div class="card-body">
-            <h1 class="jumbotron-heading">Ben Newell</h1>
-            <p class="card-text">PPA Touring Pro</p>
-            <div class="d-flex justify-content-between align-items-center">
-                <button
-                  type="button"
-                  class="btn btn-sm btn-primary"
-                >Lessons</button>
-                <button
-                  type="button"
-                  class="btn btn-sm btn-success"
-                >Sponsors</button>
-                <button
-                  type="button"
-                  class="btn btn-sm btn-secondary"
-                >About</button>
-            </div>
-            </br>
-            <ul class="list-group mb-3">
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Highest PPA </br> Doubles</h6>
-                {{!-- <small class="text-muted">Brief description</small> --}}
-              </div>
-              <span class="font-weight-bold">17th</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Highest PPA </br>Singles</h6>
-                {{!-- <small class="text-muted">Brief description</small> --}}
-              </div>
-              <span class="font-weight-bold">27th</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Highest PPA </br>Mixed</h6>
-                {{!-- <small class="text-muted">Brief description</small> --}}
-              </div>
-              <span class="font-weight-bold">51st</span>
-            </li>
-                        <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">DUPR </br>Doubles</h6>
-                {{!-- <small class="text-muted">Brief description</small> --}}
-              </div>
-              <span class="font-weight-bold">6.24</span>
-            </li>
-                        <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">DUPR </br>Singles</h6>
-                {{!-- <small class="text-muted">Brief description</small> --}}
-              </div>
-              <span class="font-weight-bold">6.66</span>
-            </li>
-          </ul>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3"></div>
-      </div>
       
       <!-- FOOTER -->
       <footer class="container">
