--- a/views/pickleball.hbs
+++ b/views/pickleball.hbs
@@ -429,7 +429,7 @@
                 <li class="list-group-item d-flex justify-content-between lh-condensed">
                   <div>
                     <h6 class="my-0">Ben Lessons</h6>
-                    <div id="bendata">{{data}}</div>
+                    <div id="bendata"></div>
                   </div>
                 </li>
               </ul>
