--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,6 +15,33 @@
 
     <!-- Custom fonts for this template -->
   <script src="https://unpkg.com/feather-icons"></script>
+  <script
+      id="setmore_script"
+      type="text/javascript"
+      src="https://storage.googleapis.com/fullintegration-live/webComponentAppListing/Container/setmoreIframeLive.js"
+    ></script>
+    <a
+      style="
+        float: none;
+        position: fixed;
+        right: -2px;
+        top: 25%;
+        display: block;
+        z-index: 20000;
+      "
+      id="Setmore_button_iframe"
+      href="https://booking.setmore.com/scheduleappointment/058fa8c2-a933-4fff-9af3-2f601b3641ff"
+      ><img
+        border="none"
+        src="https://storage.googleapis.com/full-assets/setmore/images/1.0/Calendar/Setmore-Book-Now.png"
+        alt="Book an appointment with Benny Newell using Setmore"
+    /></a>
+
+    <script
+      id="setmore_script"
+      type="text/javascript"
+      src="https://storage.googleapis.com/fullintegration-live/webComponentAppListing/Container/setmoreIframeLive.js"
+    ></script>
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -102,7 +129,15 @@
         </div>
       </div>
     </section>
-
+    <a
+        style="float: none"
+        id="Setmore_button_iframe"
+        href="https://booking.setmore.com/scheduleappointment/058fa8c2-a933-4fff-9af3-2f601b3641ff"
+        ><img
+          border="none"
+          src="https://storage.googleapis.com/full-assets/setmore/images/1.0/Settings/book-now-blue.svg"
+          alt="Book an appointment with Benny Newell using Setmore"
+      /></a>
     <div style='border-top: solid; border-color: white;'>
     </div>
 
