--- a/views/index.hbs
+++ b/views/index.hbs
@@ -114,7 +114,7 @@
         </div>
       </div>
     </section>
-    <iframe src="https://bennyg60s.setmore.com/bennynewell" scrolling="yes" width="1200px" height="600px" frameborder="0"></iframe>
+    <iframe src="https://bennyg60s.setmore.com/" scrolling="yes" width="1200px" height="600px" frameborder="0"></iframe>
     <a
         style="float: none"
         id="Setmore_button_iframe"
