--- a/views/liftinsights.hbs
+++ b/views/liftinsights.hbs
@@ -1,151 +1,166 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
   <head>
-
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Bens.Work</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom fonts for this template -->
-  <script src="https://unpkg.com/feather-icons"></script>
-    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="stylesheets/new-age.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
-  <body id='home'>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <div class="container">
-        <img width='20%' height='20%' src="../images/NewLiftSVG.svg" alt="">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fa fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#intro" style='font-weight: bold; font-size: 15px;'>HOME</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="#titleSubTop">SERVICES</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="/liftinsights">PRODUCTS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="#about">ABOUT US</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="#contact">CONTACT</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="https://benmnewell.wixsite.com/website">SCHEDULE</a>
-            </li>
-          </ul>
+  <body class="container" style="max-width: 1000px">
+    <div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+        <div style="font-weight: bold">
+          <span class="fs-4"><img width='100px' src="../images/NewLiftSVG.svg" alt=""></span>
+          </br>
+          MISSION | PROVIDE LIFT
         </div>
+      </a>
+
+      {{!-- <ul class="nav nav-pills">
+        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Portfolio</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
+      </ul> --}}
+    </header>
+  </div>
+  
+    <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+
+      <div class="col">
+        <img height= '300px' src="../images/benlogo.jpg" alt="Rounded circle Image" class="rounded-circle">
+        <h1 >Ben M. Newell, MBA</h1>
+      
+        {{!-- <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3">
+            <h4 class="my-0 fw-normal">Website Consultation</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$90<small class="text-body-secondary fw-light">/hr</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li style="font-weight: bold">10+ years with website building platforms</li>
+
+              <li>(Consultation only)</li>
+              <li>Empowering users through Wix and Shopify</li>
+              <li>Javascript, HTML, and CSS consultation</li>
+              <li>Hosting / domain consultation</li>
+            </ul>
+            <button type="button" class="w-100 btn btn-lg btn-light">Book Now</button>
+          </div>
+        </div> --}}
       </div>
-    </nav>
-
-    <section id='intro'class='fade-scroll' display='block' >
-      <div style='text-align: center; justify-content: center' class="container">
-        <div style='justify-content: center;' class="row">
-        </div>
-        <br>
-        <br>
-        <br>
-        <div>
-          <h1 id='title'>
-            LIFT <img width='7%' height='7%' src="../images/liftinsights.png" alt=""> INSIGHTS
-          </h1>
-          <div style=' width: 100%; border-top: solid; border-color: white;'>
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm border-primary">
+          <div class="card-header py-3 text-bg-primary border-primary">
+            <h4 class="my-0 fw-normal">Full Stack Development</h4>
           </div>
-          <br>
-            <a href="#" style='color: white; bakground-color: transparent; border: transparent' >Find Your Target Audiance</a><a style='cursor: pointer; color: white'>&nbsp;|&nbsp;</a> 
-            <a href="#" style='color: white; background-color: transparent; border: transparent' >Increase Your Sales</a><a style='cursor: pointer; color: white'>&nbsp;|&nbsp;</a> 
-            <a href="#" style='color: white; background-color: transparent; border: transparent' >Market Efficiently</a>
-          <br>
-          <br>
-          <div style='justify-content: center; text-align: center' class='row'>
-              <button onClick= '' style="padding-top: 10px; height: 50px; width:300px; color: black" type="button" class="btn btn-lg btn-block btn-light">Log In</button>
-              <div style='height: 10px'></div> &nbsp;
-              <button onClick= '' style="padding-top: 10px; height: 50px; width:300px; color: white" type="button" class="btn btn-lg btn-link">Get Started</button>
-          </div>
-        </div>
-        <br>
-        <div style='justify-content: center' class="row">
-          <div class="col-4">
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$100<small class="text-body-secondary fw-light">/hr</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li style="font-weight: bold">Certified Full Stack Developer</li>
+              <li>(Build and host website applications)</li>
+              <li>10+ years of website development</li>
+              <li>3+ years of REACT experience</li>
+              <li>Ability to build real time websites</li>
+            </ul>
+            <button onclick="location.href = 'https://www.liftkc.online/book-online/tableau-consulting'" type="button" class="w-100 btn btn-lg btn-primary">Book Now</button>
           </div>
         </div>
       </div>
-    </section>
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3">
+            <h4 class="my-0 fw-normal">Tableau</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$90<small class="text-body-secondary fw-light">/hr</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li style="font-weight: bold">Certified Tableau Desktop</li>
+              <li style="font-weight: bold">Qualified Associate</li>
 
+              <li>10+ years of development experience</li>
+              <li>4+ years of analytical training experience</li>
+              <li>4+ years of Tableau Server customer support</li>
+            </ul>
+            <button onclick="location.href = 'https://www.liftkc.online/book-online/tableau-consulting'" type="button" class="w-100 btn btn-lg btn-light">Book Now</button>
+          </div>
+        </div>
+      </div>
+      
+       
+    </div>
+    <hr>
+    <div class="container">
+      <h1 style="color: #3f7bc7">
+      PORTFOLIO
+      </h1>
+      <h5>
+       Nike, Inc.
+      </h5>
+      <p>
+      Data Analytics Manager and Tableau Server Administrator
+      </p>
+      <h5>
+       Major League Pickleball
+      </h5>
+      <p>
+      React Application (Javascript, React, HTML, CSS, Heroku, Go Daddy)
+      </p>
+      <h5>
+       American Century Investments
+      </h5>
+      <p>
+      Embedded Analytics (Tableau Desktop, Tableau Server, Full Stack Development)
+      </p>
 
-    <div style='border-top: solid; border-color: white;'>
+    </div>
+    <hr>
+    <div class="container">
+      <h1 style="color: #3f7bc7">
+      ABOUT
+      </h1>
+      <h5>
+      Ben Newell, MBA (Founder)
+      </h5>
+      <p>
+      Ben has been a student of the Business Intelligence space for 10+ years and Full Stack Web Development for 5+ years.
+      He is versed in the Tableau Suite and obtained his Tableau Desktop Qualified Associate certification in 2019. He has implemented multiple websites including React applications.
+      Ben loves to discuss strategy, business objectives, and user experience.
+      </p>
+
+    </div>
+    <hr>
+    <div class="container">
+      <h1 style="color: #3f7bc7">
+      CONTACT
+      </h1>
+      <h5>
+      Phone:
+      </h5>
+      <p>
+      (785)633-5715
+      </p>
+      <h5>
+      Email:
+      </h5>
+      <p>
+      ben_newell@liftkc.com
+      </p>
+    </div>
+    <div class="container">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+      </a>
+      <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Lift LLC</span>
     </div>
 
-    <footer>     
-      <div id='contact' class="container">
-        <p>&copy; Created by Lift LLC. All Rights Reserved.</p>
-        <p>No affiliation with Tableau or Oracle.</p>
-        <br>
-        <p>905 McGee St. #289, Kansas City, MO 64106</p>
-        <p>(913) 297-9239</p>
-        <p>sales@liftkc.com</p>
-      </div>
-    </footer>
 
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="javascripts/new-age.min.js"></script>
-    <script src="javascripts/navigation.js"></script>
-
-    <!-- Check images before project page gets rendered! -->
-    <script>
-      feather.replace()
-    </script>
-    <script class="js">
-    </script>
+  </footer>
+</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
-
 </html>
-
-{{!-- Save for refrence --}}
-
-    {{!-- <header class="masthead">
-      <div class="container h-100">
-        <div class="row h-100">
-          <div class="col-lg-7 my-auto">
-            <div class="header-content mx-auto"> --}}
-              {{!-- <img class="img-circle" src="https://media.licdn.com/dms/image/C5603AQH3bf6tVzfzDA/profile-displayphoto-shrink_200_200/0?e=1535587200&v=beta&t=Uu8k1tREG6TC4vTSwdXqjckCXa0Jp49KqSpe00IFujU" alt=""></img>
-              <div class="social">
-                <br>
-                <a style='color: rgba(246, 248, 250, 0.644)' href="https://www.linkedin.com/in/ben-newell-mba/"><i id="linkedin" class="fa fa-3x fa-linkedin"></i></a>
-                <a style='color: rgba(246, 248, 250, 0.644)' href="https://github.com/BenNewell32"><i id="github" class="fa fa-3x fa-github"></i></a>
-                <a style='color: rgba(246, 248, 250, 0.644)' href=""><i id="twitter" class="fa fa-3x fa-twitch"></i></a>
-                <a style='color: rgba(246, 248, 250, 0.644)' href="mailto:ben.m.newell@gmail.com"><i id="mail" class="fa fa-3x fa-envelope "></i></a>
-              </div> --}}
-            {{!-- </div>
-          </div>
-        </div>
-      </div> --}}
-    {{!-- </header> --}}
