update headers for sections.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -34,29 +34,12 @@
       <div class="col">
         <img height= '300px' src="../images/benlogo.jpg" alt="Rounded circle Image" class="rounded-circle">
         <h1 >Ben M. Newell, MBA</h1>
-      
-        {{!-- <div class="card mb-4 rounded-3 shadow-sm">
-          <div class="card-header py-3">
-            <h4 class="my-0 fw-normal">Website Consultation</h4>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">$90<small class="text-body-secondary fw-light">/hr</small></h1>
-            <ul class="list-unstyled mt-3 mb-4">
-              <li style="font-weight: bold">10+ years with website building platforms</li>
-
-              <li>(Consultation only)</li>
-              <li>Empowering users through Wix and Shopify</li>
-              <li>Javascript, HTML, and CSS consultation</li>
-              <li>Hosting / domain consultation</li>
-            </ul>
-            <button type="button" class="w-100 btn btn-lg btn-light">Book Now</button>
-          </div>
-        </div> --}}
       </div>
       <div class="col">
-        <div class="card mb-4 rounded-3 shadow-sm border-primary">
-          <div class="card-header py-3 text-bg-primary border-primary">
-            <h4 class="my-0 fw-normal">Full Stack Web Development</h4>
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div style="background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('/images/react2.png');
+ background-size: cover" class="card-header py-3 text-bg-primary border-primary">
+            <h4 style="font-weight: 700" class="my-0 ">Full Stack Web Development</h4>
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$100<small class="text-body-secondary fw-light">/hr</small></h1>
@@ -72,9 +55,10 @@
         </div>
       </div>
       <div class="col">
-        <div class="card mb-4 rounded-3 shadow-sm border-success">
-          <div class="card-header text-bg-success  py-3">
-            <h4 class="my-0 fw-normal">Tableau (Business Intelligence)</h4>
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div style="background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('/images/tableau.jpg');
+ background-size: cover" class="card-header py-3">
+            <h4 style='font-weight: 700; color: white' class="my-0 ">Tableau (Business Intelligence)</h4>
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$90<small class="text-body-secondary fw-light">/hr</small></h1>
@@ -86,7 +70,7 @@
               <li>4+ years of analytical training experience</li>
               <li>4+ years of Tableau Server customer support</li>
             </ul>
-            <button onclick="location.href = 'https://www.liftkc.online/booking-calendar/tableau-consulting'" type="button" class="w-100 btn btn-lg btn-success">Book Now</button>
+            <button onclick="location.href = 'https://www.liftkc.online/booking-calendar/tableau-consulting'" type="button" class="w-100 btn btn-lg btn-dark">Book Now</button>
           </div>
         </div>
       </div>
