--- a/views/liftinsights.hbs
+++ b/views/liftinsights.hbs
@@ -54,7 +54,7 @@
       <div class="col">
         <div class="card mb-4 rounded-3 shadow-sm border-primary">
           <div class="card-header py-3 text-bg-primary border-primary">
-            <h4 class="my-0 fw-normal">Full Stack Development</h4>
+            <h4 style='font-weight: 700' class="my-0">Full Stack Development</h4>
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$100<small class="text-body-secondary fw-light">/hr</small></h1>
