--- a/views/index.hbs
+++ b/views/index.hbs
@@ -37,9 +37,10 @@
       </div>
       <div class="col">
         <div class="card mb-4 rounded-3 shadow-sm">
-          <div style="background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('/images/react2.png');
+          <div style=" min-height: 75px; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('/images/react2.png');
  background-size: cover" class="card-header py-3 text-bg-primary border-primary">
-            <h4 style="font-weight: 700" class="my-0 ">Full Stack Web Development</h4>
+            <h4 style="font-weight: 700" class="my-0 ">Everything Web </h4>
+            <h7 style="font-weight: 700" class="my-0 ">React | APIs | Databases</h7>
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$100<small class="text-body-secondary fw-light">/hr</small></h1>
@@ -56,9 +57,11 @@
       </div>
       <div class="col">
         <div class="card mb-4 rounded-3 shadow-sm">
-          <div style="background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('/images/tableau.jpg');
+          <div style="min-height: 75px; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('/images/tableau.jpg');
  background-size: cover" class="card-header py-3">
-            <h4 style='font-weight: 700; color: white' class="my-0 ">Tableau (Business Intelligence)</h4>
+            <h4 style='font-weight: 700; color: white' class="my-0 ">Everything Tableau</h4>
+            <h7 style="font-weight: 700; color: white"  class="my-0 ">Desktop | Cloud | Server</h7>
+
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$90<small class="text-body-secondary fw-light">/hr</small></h1>
