--- a/views/index.hbs
+++ b/views/index.hbs
@@ -152,7 +152,7 @@
             <h5>
               Phone (Text Only): 
             </h5>     
-            <p>(785)633-5715</p>
+            <p><a href="sms:+17856335715">(785)633-5715 </a></p>
             <h5>
               Email:
             </h5>     
