--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300);
 
-
 div.business-card {
   height: 300px;
   width: 427px;
-
 }
-div.business-card:hover .flipper, div.business-card.hover .flipper {
+div.business-card:hover .flipper,
+div.business-card.hover .flipper {
   transform: rotateY(190deg) rotateZ(90deg);
 }
 
@@ -17,7 +16,8 @@ div.flipper {
   transform-origin: center 240px;
 }
 
-div.front, div.back {
+div.front,
+div.back {
   backface-visibility: hidden;
   position: absolute;
   top: 0;
@@ -106,4 +106,13 @@ div.back ul.social li:first-child {
   margin-top: 2rem;
 }
 
-
+.reveal {
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: 2s all ease;
+}
+.reveal.active {
+  transform: translateY(0);
+  opacity: 1;
+}
