--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,49 +1,73 @@
-<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <script src="/javascripts/navigation.js"></script>
 
   </head>
   <body class="container" style="max-width: 1200px">
     <div class="container">
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-      <a class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-        <div style="font-weight: bold">
-          <span class="fs-4"><img width='100px' src="../images/NewLiftSVG.svg" alt=""></span>
-          </br>
-          MISSION | PROVIDE LIFT
-        </div>
-      </a>
+      <header
+        class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
+      >
+        <a
+          class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+        >
+          <svg class="bi me-2" width="40" height="32"><use
+              xlink:href="#bootstrap"
+            ></use></svg>
+          <div style="font-weight: bold">
+            <span class="fs-4"><img
+                width="100px"
+                src="../images/NewLiftSVG.svg"
+                alt=""
+              /></span>
+            <div></div>
+            MISSION | PROVIDE LIFT
+          </div>
+        </a>
 
-      {{!-- <ul class="nav nav-pills">
+        {{! <ul class="nav nav-pills">
         <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
         <li class="nav-item"><a href="#" class="nav-link">Portfolio</a></li>
         <li class="nav-item"><a href="#" class="nav-link">About</a></li>
         <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
-      </ul> --}}
-    </header>
-  </div>
-  
+      </ul> }}
+      </header>
+    </div>
+
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
 
       <div class="col">
-        <img height= '300px' src="../images/benlogo.jpg" alt="Rounded circle Image" class="rounded-circle">
-        <h1 >Ben M. Newell, MBA</h1>
+        <img
+          height="300px"
+          src="../images/benlogo.jpg"
+          alt="Rounded circle Image"
+          class="rounded-circle"
+        />
+        <h1>Ben M. Newell, MBA</h1>
       </div>
-      <div class="col">
+      <div class="col reveal">
         <div class="card mb-4 rounded-3 shadow-sm">
-          <div style=" min-height: 75px; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9) ), url('/images/react2.png');
- background-size: cover" class="card-header py-3 text-bg-primary border-primary">
-            <h4 style="font-weight: 700" class="my-0 ">Everything Web </h4>
-            <h7 style="font-weight: 700" class="my-0 ">React | APIs | Databases</h7>
+          <div
+            style=" min-height: 75px; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9) ), url('/images/react2.png'); background-size: cover"
+            class="card-header py-3 text-bg-primary border-primary"
+          >
+            <h4 style="font-weight: 700" class="my-0">Everything Web </h4>
+            <h7 style="font-weight: 700" class="my-0">React | APIs | Databases</h7>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">$100<small class="text-body-secondary fw-light">/hr</small></h1>
+            <h1 class="card-title pricing-card-title">$100<small
+                class="text-body-secondary fw-light"
+              >/hr</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
               <li style="font-weight: bold">Certified Full Stack Developer</li>
               <li>(Build and host website applications)</li>
@@ -51,20 +75,31 @@
               <li>3+ years of REACT experience</li>
               <li>Ability to build real time websites</li>
             </ul>
-            <button onclick="location.href = 'https://www.liftkc.online/booking-calendar/full-stack-development-consulting'" type="button" class="w-100 btn btn-lg btn-primary">Book Now</button>
+            <button
+              onclick="location.href = 'https://www.liftkc.online/booking-calendar/full-stack-development-consulting'"
+              type="button"
+              class="w-100 btn btn-lg btn-primary"
+            >Book Now</button>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col reveal">
         <div class="card mb-4 rounded-3 shadow-sm">
-          <div style="min-height: 75px; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9) ), url('/images/tableau.jpg');
- background-size: cover" class="card-header py-3">
-            <h4 style='font-weight: 700; color: white' class="my-0 ">Everything Tableau</h4>
-            <h7 style="font-weight: 700; color: white"  class="my-0 ">Desktop | Cloud | Server</h7>
+          <div
+            style="min-height: 75px; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9) ), url('/images/tableau.jpg');
+ background-size: cover"
+            class="card-header py-3"
+          >
+            <h4 style="font-weight: 700; color: white" class="my-0">Everything
+              Tableau</h4>
+            <h7 style="font-weight: 700; color: white" class="my-0">Desktop |
+              Cloud | Server</h7>
 
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">$90<small class="text-body-secondary fw-light">/hr</small></h1>
+            <h1 class="card-title pricing-card-title">$90<small
+                class="text-body-secondary fw-light"
+              >/hr</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
               <li style="font-weight: bold">Certified Tableau Desktop</li>
               <li style="font-weight: bold">Qualified Associate</li>
@@ -73,124 +108,139 @@
               <li>4+ years of analytical training experience</li>
               <li>4+ years of Tableau Server customer support</li>
             </ul>
-            <button onclick="location.href = 'https://www.liftkc.online/booking-calendar/tableau-consulting'" type="button" class="w-100 btn btn-lg btn-dark">Book Now</button>
+            <button
+              onclick="location.href = 'https://www.liftkc.online/booking-calendar/tableau-consulting'"
+              type="button"
+              class="w-100 btn btn-lg btn-dark"
+            >Book Now</button>
           </div>
         </div>
       </div>
-      
-       
+
     </div>
 
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-      <div class="col">
+      <div class="col reveal">
         <div class="card mb-4 rounded-3 shadow-sm">
           <div class="card-header py-3">
             <h1 class="txt-eff">
               <span class="text-wrapper">
                 <span class="line line1"></span>
-                <span style="font-weight: bold; color: #3f7bc7" class="letters">PORTFOLIO</span>
+                <span
+                  style="font-weight: bold; color: #3f7bc7"
+                  class="letters"
+                >PORTFOLIO</span>
               </span>
             </h1>
           </div>
           <div class="card-body">
             <h5>
-          Nike, Inc.
-          </h5>
-          <p>
-          Data Analytics Manager and Tableau Server Administrator
-          </p>
-          <h5>
-          Major League Pickleball
-          </h5>
-          <p>
-          React Application (Javascript, React, HTML, CSS, Heroku, Go Daddy)
-          </p>
-          <h5>
-          American Century Investments
-          </h5>
-          <p>
-          Embedded Analytics (Tableau Desktop, Tableau Server, Full Stack Development)
-          </p>       
+              Nike, Inc.
+            </h5>
+            <p>
+              Data Analytics Manager and Tableau Server Administrator
+            </p>
+            <h5>
+              Major League Pickleball
+            </h5>
+            <p>
+              React Application (Javascript, React, HTML, CSS, Heroku, Go Daddy)
+            </p>
+            <h5>
+              American Century Investments
+            </h5>
+            <p>
+              Embedded Analytics (Tableau Desktop, Tableau Server, Full Stack
+              Development)
+            </p>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col reveal">
         <div class="card mb-4 rounded-3 shadow-sm">
           <div class="card-header py-3">
-           <h1 class="txt-eff">
+            <h1 class="txt-eff">
               <span class="text-wrapper">
                 <span class="line line1"></span>
-                <span style="font-weight: bold; color: #3f7bc7" class="letters">ABOUT</span>
+                <span
+                  style="font-weight: bold; color: #3f7bc7"
+                  class="letters"
+                >ABOUT</span>
               </span>
             </h1>
           </div>
           <div class="card-body">
-            
+
             <p>
-            Ben has been a student of the Business Intelligence space for 10+ years and Full Stack Web Development for 5+ years.
-            </br></br>
-            He is versed in the Tableau Suite and obtained his Tableau Desktop Qualified Associate certification in 2019.
-            </br></br>
-            He has implemented multiple websites including React applications and loves to discuss strategy, business objectives, and user experience.
-            </p>      
+              Ben has been a student of the Business Intelligence space for 10+
+              years and Full Stack Web Development for 5+ years.
+            </p>
+            <p>
+              He is versed in the Tableau Suite and obtained his Tableau Desktop
+              Qualified Associate certification in 2019.
+            </p>
+            <p>
+              He has implemented multiple websites including React applications
+              and loves to discuss strategy, business objectives, and user
+              experience.
+            </p>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col reveal">
 
         <div class="card mb-4 rounded-3 shadow-sm">
           <div class="card-header py-3">
             <h1 class="txt-eff">
               <span class="text-wrapper">
                 <span class="line line1"></span>
-                <span style="font-weight: bold; color: #3f7bc7" class="letters">CONTACT</span>
+                <span
+                  style="font-weight: bold; color: #3f7bc7"
+                  class="letters"
+                >CONTACT</span>
               </span>
             </h1>
           </div>
           <div class="card-body">
-            
+
             <h5>
-              Phone (Text Only): 
-            </h5>     
+              Phone (Text Only):
+            </h5>
             <p><a href="sms:+17856335715">(785)633-5715 </a></p>
             <h5>
               Email:
-            </h5>     
+            </h5>
             <p>ben_newell@liftkc.com</p>
           </div>
         </div>
       </div>
     </div>
-        <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+    <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
 
-    {{!-- <div class="col business-card" ontouchstart="this.classList.toggle('hover');"> 
-      <div class="flipper">
-        <div class="front">
-          <figure>
-            <img height= '300px' src="../images/Liftkc2.png">
-          </figure>
-        </div>
-        <div class="back">
-          <figure>
-            <img height= '300px' src="../images/liftkc.png">
-          </figure>
-        </div>
-      </div>
-    </div> --}}
     </div>
     <div class="container">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <div class="col-md-4 d-flex align-items-center">
-      <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-      </a>
-      <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Lift LLC</span>
+      <footer
+        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
+      >
+        <div class="col-md-4 d-flex align-items-center">
+          <a
+            href="/"
+            class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
+          >
+            <svg class="bi" width="30" height="24"><use
+                xlink:href="#bootstrap"
+              ></use></svg>
+          </a>
+          <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Lift LLC</span>
+        </div>
+
+      </footer>
     </div>
-
-
-  </footer>
-</div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
     <script src="../public/javascripts/navigation.js"></script>
   </body>
 </html>
