add scrolling animations.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -55,6 +55,7 @@
         />
         <h1>Ben M. Newell, MBA</h1>
       </div>
+      <div class="arrow bounce" style="margin-bottom: 50px"></div>
       <div class="col reveal">
         <div class="card mb-4 rounded-3 shadow-sm">
           <div
