--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -112,6 +112,10 @@ div.back ul.social li:first-child {
   opacity: 0;
   transition: 2s all ease;
 }
+
+.inactive {
+  display: none;
+}
 .reveal.active {
   transform: translateY(0);
   opacity: 1;
