--- a/views/index.hbs
+++ b/views/index.hbs
@@ -54,8 +54,11 @@
           class="rounded-circle"
         />
         <h1>Ben M. Newell, MBA</h1>
+        <div id="arrow">
+          <div class="arrow bounce" style="margin-bottom: 50px"></div>
+        </div>
       </div>
-      <div class="arrow bounce" style="margin-bottom: 50px"></div>
+
       <div class="col reveal">
         <div class="card mb-4 rounded-3 shadow-sm">
           <div
