test facility ally

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -58,7 +58,6 @@
           <div class="arrow bounce" style="margin-bottom: 50px"></div>
         </div>
       </div>
-
       <div class="col reveal">
         <div class="card mb-4 rounded-3 shadow-sm">
           <div
@@ -222,6 +221,7 @@
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
 
     </div>
+    <div id="gb_widget"><img src="https://app.facilityally.com/images/loading.gif" style="margin: 0 auto"></div><script src="https://app.facilityally.com/embed.js"></script><script>load_gb_widget({url:"https://app.facilityally.com/book/liftkc/all-touring-pros/all",width:"auto"});</script>
     <div class="container">
       <footer
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
